fix sidenav child item badge, not to wrap text

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1455,6 +1455,7 @@ hd-start-page .container{
                 span.badge {
                   display: table-cell;
                   height: 100%;
+                  width: 20px;
                   vertical-align: middle;
                   white-space: nowrap;
                   padding: 0px 0px 0px 5px;
